--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,13 +6,14 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".application.CashRegisterApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".application.CashRegisterApp"
-        android:theme="@style/Theme.CashRegister">
+        android:theme="@style/Theme.CashRegister"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".view.ui.MainActivity"
             android:exported="true">
